# PurpleBox

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
src/: main.cpp
src/core/: cdrom.cpp  cdrom.hpp
src/core/formats/: DFormat.cpp  DFormat.hpp  Format.hpp  XfxFormat.cpp  dformat.cpp  dformat.hpp  format.cpp  format.hpp  xfxformat.cpp  xfxformat.hpp  xoformat.cpp  xoformat.hpp
src/core/interpretter/: gekko.cpp  gekko.hpp  integer_ops.cpp  memory_ops.cpp  opcodes.hpp  special_reg_ops.cpp
src/core/memory/: bus.cpp  bus.hpp  ram.cpp  ram.hpp
src/utils/: arch.cpp  arch.hpp  cmdargs.cpp  cmdargs.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp
test/core/interpretter/: gekkotest.cpp  integeropstest.cpp  opcodegentest.cpp
test/memory/: ram.cpp
test/utils/: arch.cpp  cmdargs.cpp
tools/: gcm_decompiler.py  xor_cipher.py
